fix alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,5 @@ $custom-typography: mat-typography-config(
 }
 
 .mat-mini-fab{
-  align-items: baseline;
+  align-items: baseline !important;
 }
